# sparse-blobpool

./: .gitignore  AGENTS.md  ATTACK_SYSTEM_DOCUMENTATION.md  Dockerfile  README.md  TODO.md  demo_attack_system.py  docker-compose.yml  fuzzer.toml  justfile  pyproject.toml  test_attack_integration.py  test_fuzzer_with_attacks.py
.beads/: issues.jsonl
.github/workflows/: ci.yml
docs/plans/: 2026-02-24-single-node-blobpool-sim-design.md  2026-02-24-single-node-blobpool-sim-plan.md
fuzzer_ui/: Makefile  README.md  docker-compose.yml
fuzzer_ui/backend/: Dockerfile  main.py  pyproject.toml
fuzzer_ui/frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
heuristic_sim/: __init__.py  blobpool_sim.py  config.py  describe.py  events.py  metrics.py  node.py  notebook.ipynb  peers.py  pool.py  runner.py  sim.py  sweep.py
single_node_sim/: __init__.py  availability.py  events.py  metrics.py  node.py  params.py  runner.py
single_node_sim/notebooks/: heuristics_comparison.ipynb  quickstart.ipynb
sparse_blobpool/: __init__.py  config.py  weights.json
sparse_blobpool/actors/: __init__.py  block_producer.py  honest.py
sparse_blobpool/adversaries/: __init__.py  base.py  poisoning.py  spam.py  withholding.py
sparse_blobpool/core/: __init__.py  actor.py  base.py  block_producer.py  events.py  latency.py  network.py  simulator.py  topology.py  types.py
sparse_blobpool/fuzzer/: __init__.py  autopilot.py  autopilot_with_attacks.py  config.py  database.py  executor.py  generator.py  server.py
sparse_blobpool/metrics/: __init__.py  collector.py  results.py  victim_metrics.py
sparse_blobpool/p2p/: __init__.py  node.py  topology.py
sparse_blobpool/pool/: __init__.py  blobpool.py
sparse_blobpool/protocol/: __init__.py  commands.py  constants.py  messages.py
sparse_blobpool/scenarios/: __init__.py  baseline.py  poisoning.py  spam_attack.py
specs/: implementation-plan.md  simulator-specification.md  threat-model.md
src/sparse_blobpool/: __init__.py
tests/: __init__.py  conftest.py  test_config.py  test_heuristic_sim.py
tests/test_actors/: test_adversaries.py
tests/test_adversaries/: __init__.py  test_base.py  test_poisoning.py  test_spam.py  test_withholding.py
tests/test_core/: __init__.py  test_block_producer.py  test_network.py  test_refactoring.py  test_simulator.py
tests/test_fuzzer/: test_executor.py  test_generator.py
tests/test_metrics/: test_collector.py
tests/test_p2p/: __init__.py  test_node.py  test_role_distribution.py  test_topology.py
tests/test_pool/: __init__.py  test_blobpool.py
tests/test_protocol/: __init__.py  test_constants.py  (+1 more)
web/: Dockerfile  index.html  pnpm-lock.yaml  vite.config.ts
(+37 files in other folders)
